image expand in album page no longer jumps to top of page

--- a/media/stylesheets/album.css
+++ b/media/stylesheets/album.css
@@ -45,7 +45,7 @@
     background-color: #000;
     opacity: .7;
     filter: alpha(opacity=70);
-    position: absolute; top: 0; left: 0;
+    position: absolute; left: 0px;
     width: 100%;
     height: 100%;
     z-index: 10;
@@ -54,7 +54,6 @@
     position: absolute;
     z-index: 11;
     left: 15%;
-    top: 10%;
 }
 .overlay-img {
     width: 960px;
